# RadishEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
Source/: CMakeLists.txt
Source/Base/: CMakeLists.txt
Source/Base/Include/Base/: Application.h  Common.h  Window.h
Source/Base/Include/Base/D3D12/: CommandAllocator.h  CommandList.h  CommandQueue.h  D3D12Common.h  DXContext.h  DXGIInterface.h  Device.h  Fence.h
Source/Base/Source/: Application.cpp  main_sdl.cpp
Source/Base/Source/D3D12/: CommandAllocator.cpp  CommandList.cpp  CommandQueue.cpp  DXContext.cpp  DXGIInterface.cpp  Device.cpp  Fence.cpp
Source/DX12Lib/: CMakeLists.txt  DX12Lib.aps
Source/DX12Lib/Include/: Application.h  AssetLoader.h  Common.h  Events.h  Game.h  KeyCodes.h  Window.h  d3dx12.h
Source/DX12Lib/Include/D3D12/: CommandAllocator.h  CommandList.h  CommandQueue.h  D3D12Common.h  Device.h  Fence.h
Source/DX12Lib/Source/: Application.cpp  AssetLoader.cpp  Game.cpp  Window.cpp
Source/DX12Lib/Source/D3D12/: CommandAllocator.cpp  CommandList.cpp  CommandQueue.cpp  Device.cpp  Fence.cpp
Source/DXPG/: CMakeLists.txt
Source/DXPG/Assets/Shaders/Compute/: SPDImpl.cs.hlsl
Source/DXPG/Assets/Shaders/Pixel/: Lighting.ps.hlsl  StaticMesh.ps.hlsl  Triangle.ps.hlsl
Source/DXPG/Assets/Shaders/Vertex/: Fullscreen.vs.hlsl  Lighting.vs.hlsl  ShadowMap.vs.hlsl  StaticMesh.vs.hlsl  Triangle.vs.hlsl
Source/DXPG/Shaders/Pixel/: Triangle.ps.hlsl
Source/DXPG/Shaders/Vertex/: Triangle.vs.hlsl
Source/DXPG/Source/: Common.h  DXHelpers.cpp  DXHelpers.h  DXMesh.cpp  DXMesh.h  DXPGCommon.h  DXResource.cpp  DXResource.h  Main.cpp  Model.h  ModelManager.cpp  ModelManager.h  PipelineState.cpp  PipelineState.h  RendererCommon.h  RootSignature.cpp  RootSignature.h  SceneObject.h  SceneTree.cpp  SceneTree.h  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
Source/DXPG/Source/Pipelines/: BlitPipeline.cpp  BlitPipeline.h  DeferredRenderingPipeline.cpp  DeferredRenderingPipeline.h  GenerateMipsPipeline.cpp  GenerateMipsPipeline.h  StaticMeshPipeline.cpp  StaticMeshPipeline.h
Source/DeferredRenderer/: CMakeLists.txt
Source/DeferredRenderer/Include/: Common.h  DeferredRenderer.h
Source/DeferredRenderer/Shaders/Pixel/: LightingShader.hlsl  PixelShader.hlsl
Source/DeferredRenderer/Shaders/Vertex/: VertexShader.hlsl
Source/DeferredRenderer/Source/: DeferredRenderer.cpp  main.cpp
Source/radEngine/: CMakeLists.txt
Source/radEngine/Assets/Shaders/: BindlessRootSignature.hlsli  Common.hlsli  ConstantBuffers.hlsli  FullscreenVS.hlsli  HLSLCommon.hlsli  RenderResources.hlsli  shadertoolsconfig.json
Source/radEngine/Assets/Shaders/Compute/: HeightMapToAlbedo.hlsl  HeightMapToMaterial.hlsl  HeightMapToMesh.hlsl  HeightMapToNormalMap.hlsl  ScreenSpaceRaymarch.cs.hlsl
Source/radEngine/Assets/Shaders/Compute/Terrain/: H1AddWater.hlsl  H2CalculateOutflux.hlsl  H3UpdateWaterVelocity.hlsl  H4ErosionAndDeposition.hlsl  H5SedimentTransportationAndEvaporation.hlsl  HeightMapToMaterial.hlsl  HeightMapToMesh.hlsl  HeightMapToTerrainMaterial.hlsl  HeightMapToWaterMaterial.hlsl  RenderTerrain.hlsl  RenderWater.hlsl  T1ThermalOutflux.hlsl  T2ThermalDeposit.hlsl  TerrainCommon.hlsli  TerrainConstantBuffers.hlsli  TerrainResources.hlsli  WaterPrepass.hlsl
Source/radEngine/Assets/Shaders/Graphics/: Blit.hlsl  Lighting.hlsl  ShadowMap.hlsl  StaticMesh.hlsl
Source/radEngine/Assets/Shaders/Pixel/: Blit.ps.hlsl  StaticMesh.ps.hlsl
Source/radEngine/Assets/Shaders/Vertex/: StaticMesh.vs.hlsl
Source/radEngine/Source/: DXHelpers.cpp  DXHelpers.h  DXResource.cpp  DXResource.h  InputManager.cpp  InputManager.h  Main.cpp  Model.h  ModelManager.cpp  ModelManager.h  PipelineState.cpp  PipelineState.h  RadishCommon.h  RendererCommon.h  RootSignature.h  SceneObject.h  SceneTree.cpp  SceneTree.h  Shader.h  ShaderManager.cpp  ShaderManager.h  Systems.cpp  Systems.h  TextureManager.cpp  TextureManager.h
Source/radEngine/Source/Graphics/: DXHelpers.cpp  DXHelpers.h  DXResource.cpp  DXResource.h  Model.h  ModelManager.cpp  ModelManager.h  PipelineState.cpp  PipelineState.h  Renderer.cpp  Renderer.h  RendererCommon.h  RootSignature.cpp  RootSignature.h  Shader.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
Source/radEngine/Source/Graphics/Pipelines/: BlitPipeline.cpp  BlitPipeline.h  DeferredRenderingPipeline.cpp  DeferredRenderingPipeline.h  GenerateMipsPipeline.cpp  GenerateMipsPipeline.h
Source/radEngine/Source/Pipelines/: BlitPipeline.cpp  BlitPipeline.h  DeferredRenderingPipeline.cpp  DeferredRenderingPipeline.h  GenerateMipsPipeline.cpp  GenerateMipsPipeline.h
Source/radEngine/Source/ProcGen/: TerrainGenerator.cpp  TerrainGenerator.h
